# virtualbow

./: .gitignore  ASSYMETRIC_CHANGELOG.md  BUILDING-WINDOWS.md  CHANGELOG.md  README.md  build-dev.ps1  build-portable.ps1
.github/workflows/: build.yml  (+1 more)
gui/: CMakeLists.txt
gui/resources/: resources.qrc
gui/source/: config.hpp.in
gui/source/post/: ArrowPlot.cpp  ArrowPlot.hpp  ComboPlot.cpp  ComboPlot.hpp  CurvaturePlot.cpp  CurvaturePlot.hpp  DrawForcePlot.cpp  DrawForcePlot.hpp  EnergyPlot.cpp  EnergyPlot.hpp  OutputGrid.cpp  OutputGrid.hpp  OutputWidget.cpp  OutputWidget.hpp  ResultWindow.cpp  ResultWindow.hpp  ShapePlot.cpp  ShapePlot.hpp  ShapeVideoExporter.cpp  ShapeVideoExporter.hpp  Slider.cpp  Slider.hpp  StressPlot.cpp  StressPlot.hpp
gui/source/pre/: Language.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  RecentFilesMenu.cpp  SimulationDialog.cpp  SimulationDialog.hpp  UnitDialog.cpp  UnitDialog.hpp
gui/source/pre/models/: ArcModel.cpp  ArcModel.hpp  CommentsModel.cpp  CommentsModel.hpp  DampingModel.cpp  DampingModel.hpp  DrawModel.cpp  DrawModel.hpp  HandleModel.cpp  HandleModel.hpp  LayerModel.cpp  LayerModel.hpp  LayersModel.cpp  LayersModel.hpp  LineModel.cpp  LineModel.hpp  MainModel.cpp  MainModel.hpp  MainTreeModel.cpp  MainTreeModel.hpp  MassesModel.cpp  MassesModel.hpp  MaterialModel.cpp  MaterialModel.hpp  PropertyListModel.cpp  PropertyListModel.hpp  SettingsModel.cpp  SettingsModel.hpp  SpiralModel.cpp  SpiralModel.hpp  StringModel.cpp  StringModel.hpp  TableModel.cpp  TableModel.hpp
gui/source/pre/models/base/: ModelBase.cpp  ModelBase.hpp
gui/source/pre/models/units/: Quantity.cpp  Unit.cpp  Unit.hpp  UnitSystem.cpp  UnitSystem.hpp
gui/source/pre/utils/: DoubleRange.cpp  DoubleRange.hpp  Expressions.cpp  Expressions.hpp  IntegerRange.cpp  IntegerRange.hpp  ListUtils.hpp  Rounding.cpp  Rounding.hpp
gui/source/pre/views/: ArcView.cpp  ArcView.hpp  ArrowMassView.cpp  ArrowMassView.hpp  CommentsView.cpp  CommentsView.hpp  DampingView.cpp  DampingView.hpp  DrawLengthView.cpp  DrawLengthView.hpp  DrawView.cpp  DrawView.hpp  HandleView.cpp  HandleView.hpp  LayerView.cpp  LayerView.hpp  LineView.cpp  LineView.hpp  MassesView.cpp  MassesView.hpp  MaterialView.cpp  MaterialView.hpp  SettingsView.cpp  SettingsView.hpp  SpiralView.cpp  SpiralView.hpp  SplineView.cpp  SplineView.hpp  StringView.cpp  StringView.hpp  WidthView.cpp  WidthView.hpp
gui/source/pre/views/docks/: EditDock.cpp  EditDock.hpp  PlotDock.cpp  PlotDock.hpp  TreeDock.cpp  TreeDock.hpp
gui/source/pre/views/limb2d/: HeightPlotView.cpp  HeightPlotView.hpp  ProfilePlotView.cpp  ProfilePlotView.hpp  WidthPlotView.cpp  WidthPlotView.hpp
gui/source/pre/views/limb3d/: ErrorLabel.cpp  ErrorLabel.hpp  LayerColors.cpp  LayerColors.hpp  LimbMesh.cpp  LimbMesh.hpp  LimbView.cpp  LimbView.hpp  MaterialLegend.cpp  MaterialLegend.hpp
gui/source/pre/views/primitive/: ColorView.cpp  ColorView.hpp  DoubleView.cpp  DoubleView.hpp  EnumSelectionView.cpp  EnumSelectionView.hpp  IntegerView.cpp  IntegerView.hpp  StringSelectionView.cpp  StringSelectionView.hpp  TableView.cpp  TableView.hpp  TextView.cpp  TextView.hpp
gui/source/pre/widgets/: CustomTextEdit.cpp  CustomTextEdit.hpp  DoubleOutput.cpp  DoubleOutput.hpp  DoubleSpinBox.cpp  DoubleSpinBox.hpp  IntegerSpinBox.cpp  IntegerSpinBox.hpp  PlotOverlayDialog.cpp  PlotWidget.cpp  PlotWidget.hpp  PropertyList.cpp  PropertyList.hpp  ScrollArea.hpp
gui/source/solver/: API.cpp  API.hpp  BowModel.cpp  BowModel.hpp  BowResult.hpp  Defaults.cpp  Defaults.hpp
gui/source/tests/: main.cpp
rust/: .gitignore  Cargo.toml
rust/virtualbow/: Cargo.toml
rust/virtualbow/data/examples_legacy/: README.md  recurve.bow
rust/virtualbow/data/input/: invalid_content.bow  valid_model.bow  version_invalid.bow  version_unrecognized.bow  version_unsupported.bow
rust/virtualbow/data/output/: invalid_content.res  valid_results.res  version_invalid.res  version_mismatch.res  version_missing.res  version_unrecognized.res  version_unsupported.res
rust/virtualbow/data/versions/: .gitignore  README.md
rust/virtualbow/examples/: emit_yumi.rs  emit_yumi_curved.rs
rust/virtualbow/src/: errors.rs  geometry.rs  lib.rs  simulation.rs
rust/virtualbow/src/export/: mod.rs  stl.rs
rust/virtualbow/src/input/: compatibility.rs  mod.rs  model.rs
rust/virtualbow/src/output/: mod.rs  result.rs  versions.rs
rust/virtualbow/src/profile/: mod.rs  profile.rs
rust/virtualbow/src/sections/: section.rs
rust/virtualbow/src/utils/: validation.rs
rust/virtualbow/tests/: test_example_bows.rs
rust/virtualbow_cli/: Cargo.toml
rust/virtualbow_cli/src/: main.rs
rust/virtualbow_cli/tests/: tests.rs
rust/virtualbow_ffi/: Cargo.toml  build.rs  virtualbow.hpp
rust/virtualbow_ffi/src/: api.rs  lib.rs
rust/virtualbow_gui/: Cargo.toml
rust/virtualbow_num/: Cargo.toml
rust/virtualbow_num/data/gxbeam/: curve1_section1.msgpack  curve1_section2.msgpack  curve1_section3.msgpack  curve1_section4.msgpack  curve1_section5.msgpack  curve1_section6.msgpack  curve1_section7.msgpack  curve2_section1.msgpack  curve2_section2.msgpack  curve2_section3.msgpack  curve2_section4.msgpack  curve2_section5.msgpack  curve2_section6.msgpack  curve2_section7.msgpack  curve3_section1.msgpack  curve3_section2.msgpack  curve3_section3.msgpack  curve3_section4.msgpack  curve3_section5.msgpack  curve3_section6.msgpack  curve3_section7.msgpack
rust/virtualbow_num/src/: lib.rs
rust/virtualbow_num/src/fem/: mod.rs
rust/virtualbow_num/src/testutils/: curves.rs  mod.rs  numdiff.rs  plotter.rs  plotter2.rs  sections.rs  syschecks.rs
rust/virtualbow_num/src/utils/: bisection.rs  functions.rs  geometry.rs  integration.rs  intervals.rs  minmax.rs  mod.rs  newton.rs  roots.rs  spline.rs  tridiagonal.rs
rust/virtualbow_num/tests/: test_01_element_properties.rs  test_02_static_trusses.rs  test_03_static_string.rs  test_04_string_damping.rs  test_05_linear_oscillator.rs  test_06_nonlinear_oscillator.rs  test_07_linear_beam_statics.rs  test_08_linear_beam_dynamics.rs  test_09_nonlinear_beams.rs
(+60 files in other folders)
