[workspace]
resolver = "2"

members = [
    "virtualbow",
    "virtualbow_num",
    "virtualbow_cli",
    "virtualbow_ffi",
    "virtualbow_gui",
]

[workspace.package]
version = "0.11.0"
edition = "2021"
authors = ["Stefan Pfeifer <s-pfeifer@gmx.net>"]
homepage = "https://www.virtualbow.org"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.lints.rust]
non_snake_case = "allow"            # Style
mixed_script_confusables = "allow"  # Style
confusable_idents = "allow"         # Style

[workspace.lints.clippy]
type_complexity = "allow"        # Style
too_many_arguments = "allow"     # Style
needless_range_loop = "allow"    # Sometimes needed
needless_return = "allow"        # Style
toplevel_ref_arg = "allow"       # Triggers on nalgebra stack! macros, reenable when fixed
identity_op = "allow"            # Style (i.e. use of + 0 for clarity)
module_inception = "allow"       # Style (maybe reenable later)
manual_range_contains = "allow"  # Style (manual version can be more readable)
collapsible_else_if = "allow"    # Style (can be more clear sometimes)
new_without_default = "allow"
len_without_is_empty = "allow"
missing_safety_doc = "allow"     # Enable this later

[workspace.dependencies]
nalgebra = { version = "0.34.1", features = ["serde-serialize", "rand"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
rmp-serde = "1.3.0"                                     # TODO: Remove one of them?
iter_num_tools = "0.7.1"
itertools = "0.14.0"
downcast-rs = "2.0.2"
fresnel = "0.1.0"
soa_derive = "0.14.0"
num = "0.4.3"
clap = { version = "4.5.50", features = ["derive"]}
approx = "0.5.1"
plotters = "0.3.7"
assert_matches = "1.5"
assert_cmd = "2.0.17"
spec_math = "0.1.6"
assert2 = "0.3.16"
test_each_file = "0.3.6"
cbindgen = "0.29.2"
indexmap = "2.12.0"