[package]
name = "virtualbow_ffi"
description = "C interface for the VirtualBow solver"

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
virtualbow = { version = "0.11.0", path = "../virtualbow" }
rmp-serde.workspace = true

[build-dependencies]
cbindgen.workspace = true
