[package]
name = "virtualbow_gui"
description = "Graphical user interface for VirtualBow (placeholder)"

version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
virtualbow = { version = "0.11.0", path = "../virtualbow" }
